--- a/index.html
+++ b/index.html
@@ -1,42 +1,96 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Shadab Salon</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Shadab Salon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header class="hero">
-        <div class="overlay"></div>
-        <div class="hero-text">
-            <h1>The Shadab Salon</h1>
-            <p>Where Beauty Meets Elegance</p>
-            <a href="#services" class="cta-btn">Explore Our Services</a>
-        </div>
-    </header>
-    <section id="about" class="section">
-        <h2>About Us</h2>
-        <p>At The Shadab Salon, our philosophy is rooted in elegance, precision, and customer satisfaction. We blend tradition with modern trends to bring out the best version of you.</p>
-    </section>
-    <section id="services" class="section dark">
-        <h2>Our Services</h2>
-        <ul>
-            <li><strong>Haircuts & Styling:</strong> Trendy, classic, and personalized cuts</li>
-            <li><strong>Hair Coloring:</strong> Balayage, highlights, and custom colors</li>
-            <li><strong>Facials & Skin Care:</strong> Rejuvenating treatments for radiant skin</li>
-            <li><strong>Body Massage:</strong> Relaxing and therapeutic body massages</li>
-        </ul>
-    </section>
-    <section id="contact" class="section">
-        <h2>Contact Us</h2>
-        <p>Visit us: Yaseen Apartments, Qila Road, Anupshahr - Aligarh Rd, Aligarh, UP 202001</p>
-        <p>Call us: +91 98765 43210</p>
-        <p>Email: contact@theshadabsalon.com</p>
-    </section>
-    <footer>
-        <p>&copy; 2025 The Shadab Salon. All rights reserved.</p>
-    </footer>
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1>The Shadab Salon</h1>
+      <p>Where Luxury Meets Masculine Elegance</p>
+      <a href="#booking" class="btn">Book Your Appointment</a>
+    </div>
+  </header>
+
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>The Shadab Salon is a premier male grooming destination located in Aligarh. From refined haircuts to revitalizing facials and massages, our salon blends luxury with top-tier expertise in a clean, professional environment.</p>
+  </section>
+
+  <section id="services" class="section">
+    <h2>Our Services</h2>
+    <div class="grid">
+      <div class="card"><h3>Haircuts & Styling</h3><p>Precision cuts and contemporary styles tailored for the modern man.</p></div>
+      <div class="card"><h3>Hair Coloring</h3><p>Professional coloring, highlights, and grey blending solutions.</p></div>
+      <div class="card"><h3>Facials & Skin Care</h3><p>Deep cleansing, hydrating facials, and skincare treatments.</p></div>
+      <div class="card"><h3>Body Massage</h3><p>Relaxing full-body massage therapies for stress relief.</p></div>
+      <div class="card"><h3>Head Massage</h3><p>Rejuvenating head massages to improve scalp health and relaxation.</p></div>
+    </div>
+  </section>
+
+  <section id="gallery" class="section">
+    <h2>Gallery</h2>
+    <div class="grid gallery">
+      <img src="https://images.unsplash.com/photo-1600803907084-d52719d85b08" alt="Haircut" />
+      <img src="https://images.unsplash.com/photo-1627229826840-87c7760b8df8" alt="Beard Trim" />
+      <img src="https://images.unsplash.com/photo-1603415526960-f7e0328de1f6" alt="Facial" />
+    </div>
+  </section>
+
+  <section id="testimonials" class="section">
+    <h2>What Our Clients Say</h2>
+    <div class="grid">
+      <div class="card"><p>“Exceptional service and flawless beard styling!” – Ayaan</p></div>
+      <div class="card"><p>“Came in tired, left feeling like royalty. Top-notch!” – Danish</p></div>
+    </div>
+  </section>
+
+  <section id="booking" class="section">
+    <h2>Book an Appointment</h2>
+    <form>
+      <input type="text" placeholder="Full Name" required />
+      <input type="email" placeholder="Email" required />
+      <input type="tel" placeholder="Phone Number" required />
+      <select required>
+        <option value="">Select Service</option>
+        <option>Haircut</option>
+        <option>Coloring</option>
+        <option>Facial</option>
+        <option>Massage</option>
+      </select>
+      <input type="datetime-local" required />
+      <input type="text" placeholder="Stylist Preference (optional)" />
+      <textarea placeholder="Additional Notes"></textarea>
+      <button type="submit">Confirm Booking</button>
+    </form>
+  </section>
+
+  <section id="blog" class="section">
+    <h2>Beauty Tips</h2>
+    <div class="grid">
+      <div class="card"><h3>Skincare Routine for Men</h3><p>Learn how to build a simple and effective skincare routine.</p></div>
+      <div class="card"><h3>Hair Care Advice</h3><p>Essential tips to maintain healthy, stylish hair between cuts.</p></div>
+    </div>
+  </section>
+
+  <section id="offers" class="section">
+    <h2>Special Offers</h2>
+    <ul>
+      <li>🎉 20% off on your first visit</li>
+      <li>👬 Refer a friend and get a free beard trim</li>
+      <li>🎁 Loyalty program: Every 5th service is free!</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>The Shadab Salon | Yaseen Apartments, Qila Road, Aligarh, UP 202001</p>
+    <p>Open Daily: 11:00 AM – 11:00 PM | dummyemail@example.com | +91-XXXXXXXXXX</p>
+    <p>Follow us: [Instagram] [Facebook]</p>
+  </footer>
 </body>
 </html>
